@@ -4,6 +4,8 @@ import gtk
 import gettext
 import operator
 import gobject
+import collections
+
 import tryton.common as common
 from tryton.common.domain_parser import quote
 from tryton.translate import date_format
@@ -238,7 +240,10 @@ class ScreenContainer(object):
             vbox = gtk.VBox()
             fields = [f for f in self.screen.domain_parser.fields.itervalues()
                 if f.get('searchable', True)]
-            fields.sort(key=operator.itemgetter('string'))
+            if (not hasattr(collections, 'OrderedDict')
+                    or not isinstance(self.screen.domain_parser.fields,
+                        collections.OrderedDict)):
+                fields.sort(key=operator.itemgetter('string'))
             self.search_table = gtk.Table(rows=len(fields), columns=2)
             self.search_table.set_border_width(5)
             self.search_table.set_row_spacings(2)
